--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:image" content="./img/2dslider.jpg">
   <title>2D Image Slider</title>
   
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"><style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
 <style>
 /*slid*/
           .selectJsSlid::selection  , .selectJsSlid *::selection  { color:rgb(255, 255, 255) ; background:rgb(35, 154, 178) ;  }  .selectJsSlid:focus  , .selectJsSlid *:focus  { outline:0px ;  }  .selectJsSlid , .selectJsSlid * { border:0px ; outline:0px ; vertical-align:baseline ; margin:0px ; padding:0px ;  }  .selectJsSlid   { background-position:0px top ; margin:0px auto ; text-shadow:rgb(255, 255, 255) 0px 1px 0px ; color:rgb(44, 44, 44) ; font-family:"Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial ; font-weight:400 ; font-style:normal ; font-variant-ligatures:normal ; font-variant-caps:normal ; line-height:normal ; background-color:rgb(239, 236, 221) ;   } 
